# groc

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  install.sh  pyproject.toml
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  general.md
.github/workflows/: ci.yml  release.yml
config/: groc.config.toml
docs/: ARCHITECTURE.md  SECURITY_MODEL.md
groc/: __init__.py  __main__.py  auth.py  cli.py  errors.py  grok_config.py  jsonutil.py  models.py  settings.py
groc/bridge/: __init__.py  client.py  server.py  wire.py
scripts/: package-release.sh
tests/: test_auth.py  test_bridge_server.py  test_cli.py  test_grok_config.py  test_models.py  test_settings.py  test_wire.py
