[project]
name = "groc"
version = "0.1.0"
description = "Local Grok Build launcher backed by a user-controlled ChatGPT OAuth session."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "matrixtsex" }]
keywords = ["grok", "chatgpt", "oauth", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: User Interfaces",
]

[project.scripts]
groc = "groc.cli:main"
groc-bridge = "groc.bridge.server:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
